# business_plan_app

./: requirements.txt
business_plan_flow/: README.md  pyproject.toml
business_plan_flow/src/business_plan_flow/: backend.py  frontend.py  main.py
business_plan_flow/src/business_plan_flow/crews/generate_plan_crew/: generate_plan_crew.py
business_plan_flow/src/business_plan_flow/crews/generate_plan_crew/config/: agents.yaml  tasks.yaml
business_plan_flow/src/business_plan_flow/crews/review_plan_crew/: review_plan_crew.py
business_plan_flow/src/business_plan_flow/crews/review_plan_crew/config/: agents.yaml  tasks.yaml
business_plan_flow/src/business_plan_flow/tools/: CharacterCounterTool.py
